--- a/WB_Lab4_City.css
+++ b/WB_Lab4_City.css
@@ -40,7 +40,7 @@ div#parallax-bg-3 div{
 
 
 /*(Пункт 3)*/
-/*Тайлер*/
+/*Принц*/
 div#bg-3-1{
  background:url('https://raw.githack.com/Sofa1874/Parallax/main/prince.png');
  width:529px;
@@ -48,7 +48,7 @@ div#bg-3-1{
  top:-100px;
  right:100px;
 }
-/*Вопрос*/
+/*Вопрос — ракета*/
 div#bg-3-2{
  background:url('https://raw.githack.com/Sofa1874/Parallax/main/rocket.png');
  width:603px;
@@ -56,7 +56,7 @@ div#bg-3-2{
  top:1050px;
  right:70px;
 }
-/*Сегорета*/
+/*Сегорета — Сатурн*/
 div#bg-3-3{
  background:url('https://raw.githack.com/Sofa1874/Parallax/main/Saturn.png');
  width:600px;
@@ -64,7 +64,7 @@ div#bg-3-3{
  top:1800px;
  right:140px;
 }
-/*Вопрос*/
+/*Вопрос — ракета*/
 div#bg-3-4{
  background:url('https://raw.githack.com/Sofa1874/Parallax/main/rocket.png');
  width:1104px;
@@ -76,7 +76,7 @@ div#bg-3-4{
 /*(Пункт 4)*/
 /*Мыло*/
 div#parallax-bg-2 div{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/329394fa33034252955361fd414e414bbd057ad0/soap.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/star.png');
  background-repeat:no-repeat;
  position:absolute;
  display:block;
@@ -111,7 +111,7 @@ div#bg-2-6{
 }
 
 /*(Пункт 5)*/
-/*Мыло и сигарета*/
+/*Мыло — звезда и сигарета — сатурн*/
 div#parallax-bg-1 div{
  background-repeat:no-repeat;
  position:absolute;
@@ -121,27 +121,27 @@ div#parallax-bg-1 div{
  overflow:hidden;
 }
 div#bg-1-1{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/329394fa33034252955361fd414e414bbd057ad0/soap.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/star.png');
  top:200px;
  right:450px;
 }
 div#bg-1-2{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/07514593e6186064bde7ec7c7f18dec32e5bf359/Segoreta.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/Saturn.png');
  top:420px;
  left:0px;
 }
 div#bg-1-3{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/329394fa33034252955361fd414e414bbd057ad0/soap.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/star.png');
  top:850px;
  right:-290px;
 }
 div#bg-1-4{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/07514593e6186064bde7ec7c7f18dec32e5bf359/Segoreta.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/Saturn.png');
  top:1350px;
  left:200px;
 }
 div#bg-1-5{
- background:url('https://rawcdn.githack.com/Viktorrrrriia/WB_Lab4/07514593e6186064bde7ec7c7f18dec32e5bf359/Segoreta.png');
+ background:url('https://raw.githack.com/Sofa1874/Parallax/main/Saturn.png');
  top:1200px;
  left:-200px;
 }
